# ls-timeline

./: .gitignore  README.md  components.json  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.test.json  vite.config.ts
.github/workflows/: deploy.yml
pipeline/: README.md  pyproject.toml  run_pipeline.py
pipeline/src/: cohorts.py  kaplan_meier.py  normalize.py  outliers.py  output.py
pipeline/tests/: conftest.py  test_cohorts.py  test_kaplan_meier.py  test_normalize.py  test_pipeline_integration.py
src/: App.tsx  index.css  root-loader.ts  router.tsx  test-setup.ts
src/data/: meta.json  schools-index.json
src/data/schools/: albany-law-school-of-union-university.json  american-university.json  appalachian-school-of-law.json  arizona-state-university.json  atlantas-john-marshall-law-school.json  ave-maria-school-of-law.json  barry-university.json  baylor-university.json  belmont-university.json  boston-college.json  boston-university.json  brigham-young-university.json  brooklyn-law-school.json  california-western-school-of-law.json  campbell-university.json  capital-university.json  case-western-reserve-university.json  catholic-university-of-america.json  chapman-university.json  charleston-school-of-law.json  charlotte-school-of-law.json  cleveland-state-university.json  columbia-university.json  cornell-university.json  creighton-university.json  cuny.json  dalhousie-university.json  depaul-university.json  drake-university.json  drexel-university.json  (+264 more)
src/routes/: HomePage.test.tsx  HomePage.tsx  SchoolPage.test.tsx  SchoolPage.tsx
(+55 files in other folders)
