[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ls-timeline-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "scipy>=1.13",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",  # coverage reporting for Stories 2.2+
]

[tool.pytest.ini_options]
testpaths = ["tests"]
